--- a/springApp/src/main/resources/application.properties
+++ b/springApp/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.application.name=springApp
 server.port=9090
-
+management.endpoints.web.exposure.include=*
+management.info.env.enabled=true
+info.app.name=springApp
+info.app.description=Spring Boot application
+info.app.version=1.0
