--- a/springApp/src/main/resources/application.properties
+++ b/springApp/src/main/resources/application.properties
@@ -5,3 +5,4 @@ management.info.env.enabled=true
 info.app.name=springApp
 info.app.description=Spring Boot application
 info.app.version=1.0
+management.endpoints.web.exposure.exclude=info, health
