--- a/springApp/src/main/resources/application.properties
+++ b/springApp/src/main/resources/application.properties
@@ -10,3 +10,5 @@ info.app.version=1.0
 greeting.text=Hello World
 my.City=New York
 my.House=My house is big
+
+server.servlet.context-path=/testapp
